Change Git repository URL in Jenkinsfile
Updated the Git repository URL for the clone stage.

--- a/terracicd/Jenkinsfile
+++ b/terracicd/Jenkinsfile
@@ -4,7 +4,8 @@ pipeline {
     stages {
         stage('clone') {
             steps {
-              git branch: 'main', url: 'https://github.com/CloudTechDevOps/Terraform_CICD.git'
+              #git branch: 'main', url: 'https://github.com/CloudTechDevOps/Terraform_CICD.git'
+               git 'https://github.com/vermakshitij19/CICD.git'
             }
         }
         stage('init') {
