Change terraform command to apply in Jenkinsfile

--- a/terracicd/Jenkinsfile
+++ b/terracicd/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
         stage('apply') {
             steps {
                 dir('terracicd') {
-                    sh 'terraform ${action} -auto-approve'
+                    sh 'terraform apply -auto-approve'
                 }
             }
         }
