Uncomment and enable clone stage in Jenkinsfile

--- a/terracicd/Jenkinsfile
+++ b/terracicd/Jenkinsfile
@@ -2,9 +2,9 @@ roypipeline {
     agent any
 
     stages {
-        // stage('clone') {
-          //  steps {
-               // git 'https://github.com/vermakshitij19/CICD.git'
+        stage('clone') {
+           steps {
+               git 'https://github.com/vermakshitij19/CICD.git'
             }
         }
 
